# co2-gdp_quarto

./: .gitignore  LICENSE  README.md  _quarto.yml  co2-gdp_db_quarto_sol.qmd  pyproject.toml
.github/workflows/: publish.yml
